Test the functionality of RuleBuilder.